# impo-challenge

./: .gitignore  README.md  create_admin.py  deploy.sh  docker-compose.yml  package-lock.json
.github/workflows/: ci.yml
RAG/: pyproject.toml
RAG/cloud-function/: main.py  requirements.txt
RAG/rag/: agent.py
adk-microservice/: Dockerfile  README.md  main.py  requirements.txt
adk-microservice/rag/: prompts.py
backend/: Dockerfile  README.md  firebase-credentials.json  get_token.py  login.py  requirements.txt
backend/app/: main.py
backend/app/api/: routes_admin.py  routes_file.py  routes_user.py
backend/app/core/: auth.py  firebase.py
backend/app/models/: file.py  user.py
backend/app/services/: file_service.py  user_service.py
cloud-function/: Dockerfile  README.md  main.py  requirements.txt  run.py
frontend/: .gitignore  Dockerfile  README.md  entrypoint.sh  nginx.conf  nginx.conf.template  package-lock.json  package.json  postcss.config.js  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.jsx  App.tsx  index.css  index.jsx
frontend/src/components/: ConfirmDialog.jsx  LoginForm.jsx  ResetPasswordForm.jsx  Snackbar.jsx  SnackbarContext.jsx
frontend/src/components/admin/: AdminAddUser.jsx
frontend/src/components/documentos/: CopeteGenerador.jsx  DocumentsIndex.jsx
frontend/src/components/icons/: EyeIcons.jsx
frontend/src/components/inicio/: inicio.jsx
frontend/src/components/sidebar/: sidebar.jsx
frontend/src/config/: firebase.js
